@@ -46,6 +46,7 @@
         ul li ul li {
             list-style-type: disc;
         }
+
     </style>
 </head>
 
@@ -67,6 +68,12 @@
     <li><span class="label label-success">Feature</span> Support for ap-east-1 (Hong Kong) region (S3)</li>
     <li><span class="label label-success">Feature</span> Support for me-south-1 (Bahrain) region (S3)</li>
     <li><span class="label label-success">Feature</span> Making requests to dual-stack endpoints (IPv6) (S3)</li>
+    <li><span class="label label-warning">Bugfix</span> Slow updating files after saving changes in external editor (<a
+        target="_blank" href="https://trac.cyberduck.io/ticket/11004">#11004</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Create new vaults in format 7 by default (Cryptomator) (<a
+        target="_blank" href="https://trac.cyberduck.io/ticket/11040">#11040</a>)
+    </li>
 </ul>
 
 <p>
